Fixed Header H1 on smaller screens

--- a/reonnet/css/style.css
+++ b/reonnet/css/style.css
@@ -321,11 +321,43 @@ nav .bottom img {
 	}
 
 	.sample-header-section h1 {
-		font-size: 35px;
+		font-size: 40px;
 	}
 
 	.sample-header-section #call-to-action {
 		bottom: 80px;
+	}
+
+	.sample-header-section h1 {
+		font-size: 60px;
+		text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.5);
+		padding: 10px;
+		position: relative;
+		top: 40px;
+		color: #fcfcfc;
+		letter-spacing: 2px;
+	}
+
+	.header-slide-up {
+		animation-fill-mode: forwards;
+		animation-delay: 4000ms;
+		animation-duration: 500ms;
+		animation-name: slide-up;
+		animation-timing-function: ease-in-out;
+		animation-iteration-count: 1;
+		opacity: 0;
+	}
+
+	@keyframes slide-up {
+		from {
+			top: 30vh;
+			opacity: 0;
+		}
+
+		to {
+			top: 40px;
+			opacity: 1;
+		}
 	}
 }
 
